# animilk

./: .gitignore  CMakeLists.txt  README.md  animecho.py  annotations.py  app.py  dialogue_view.cc  dialogue_view.h  first.cc  first.h  loader_dlg.py  loader_dlg.ui  new_annotation_wizard.ui  player_window.py  player_window.ui  regen_all.sh  time_serialization.py  user_preferences.py  webpage.qrc  workspace.py  workspace.ui  xlib_binding.py
